// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositsStatus renders blocked status 1`] = `
<div>
  <span
    class="account-status__info__yellow"
  >
    <svg
      class="gridicon gridicons-notice"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
        />
      </g>
    </svg>
    Temporarily suspended
    <button
      class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
      type="button"
    >
      <div
        class="wcpay-tooltip__content-wrapper"
      >
        <div
          aria-label="Learn more about payouts suspended"
          role="button"
          tabindex="0"
        >
          <svg
            class="gridicon gridicons-help-outline"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
              />
            </g>
          </svg>
        </div>
      </div>
    </button>
  </span>
</div>
`;

exports[`DepositsStatus renders blocked status 2`] = `
<div>
  <span
    class="account-status__info__yellow"
  >
    <svg
      class="gridicon gridicons-notice"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
        />
      </g>
    </svg>
    Temporarily suspended
    <button
      class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
      type="button"
    >
      <div
        class="wcpay-tooltip__content-wrapper"
      >
        <div
          aria-label="Learn more about payouts suspended"
          role="button"
          tabindex="0"
        >
          <svg
            class="gridicon gridicons-help-outline"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
              />
            </g>
          </svg>
        </div>
      </div>
    </button>
  </span>
</div>
`;

exports[`DepositsStatus renders daily status 1`] = `
<div>
  <span
    class="account-status__info__green"
  >
    <svg
      class="gridicon gridicons-checkmark-circle"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
        />
      </g>
    </svg>
    Automatic
  </span>
</div>
`;

exports[`DepositsStatus renders disabled status 1`] = `
<div>
  <span
    class="account-status__info__red"
  >
    <svg
      class="gridicon gridicons-notice"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
        />
      </g>
    </svg>
    Disabled
  </span>
</div>
`;

exports[`DepositsStatus renders manual status 1`] = `
<div>
  <span
    class="account-status__info__green"
  >
    <svg
      class="gridicon gridicons-checkmark-circle"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
        />
      </g>
    </svg>
    Manual
  </span>
</div>
`;

exports[`DepositsStatus renders monthly status 1`] = `
<div>
  <span
    class="account-status__info__green"
  >
    <svg
      class="gridicon gridicons-checkmark-circle"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
        />
      </g>
    </svg>
    Automatic
  </span>
</div>
`;

exports[`DepositsStatus renders pending verification status 1`] = `
<div>
  <span
    class="account-status__info__yellow"
  >
    <svg
      class="gridicon gridicons-notice"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
        />
      </g>
    </svg>
    Temporarily suspended
    <button
      class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
      type="button"
    >
      <div
        class="wcpay-tooltip__content-wrapper"
      >
        <div
          aria-label="Learn more about payouts suspended"
          role="button"
          tabindex="0"
        >
          <svg
            class="gridicon gridicons-help-outline"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
              />
            </g>
          </svg>
        </div>
      </div>
    </button>
  </span>
</div>
`;

exports[`DepositsStatus renders unknown status 1`] = `
<div>
  <span
    class="account-status__info__green"
  >
    <svg
      class="gridicon gridicons-checkmark-circle"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
        />
      </g>
    </svg>
    Unknown
  </span>
</div>
`;

exports[`DepositsStatus renders weekly status 1`] = `
<div>
  <span
    class="account-status__info__green"
  >
    <svg
      class="gridicon gridicons-checkmark-circle"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658A9.98 9.98 0 0012 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10a9.94 9.94 0 00-.966-4.266L11 17.768z"
        />
      </g>
    </svg>
    Automatic
  </span>
</div>
`;
